Fix a bunch of clang-tidy warnings

--- a/e2e/viewer/index.html
+++ b/e2e/viewer/index.html
@@ -23,7 +23,7 @@
                     var html = "";
                     for (var source in data) {
                         var sites = data[source];
-                        if (Object.keys(sites).length == 0) {
+                        if (Object.keys(sites).length === 0) {
                             continue;
                         }
 
