--- a/e2e/viewer/md.html
+++ b/e2e/viewer/md.html
@@ -26,7 +26,7 @@
                     html += "Last check on the " + dateStr + " at " + timeStr + ".\n";
                     for (var source in data) {
                         var sites = data[source];
-                        if (Object.keys(sites).length == 0) {
+                        if (Object.keys(sites).length === 0) {
                             continue;
                         }
 
@@ -59,7 +59,7 @@
                                 var assoc = {
                                     error: "x",
                                     warning: "warning",
-                                    ok: "heavy_check_mark",
+                                    ok: "heavy_check_mark"
                                 };
                                 html += " :" + assoc[state.status] + ":" + (state.message && state.message.length > 0 ? " <span title='" + state.message + "'>?</span>" : "") + " |";
                             }
